@@ -1,3 +1,12 @@
+2009-08-05  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* lread.c (read1, syms_of_lread): Read hashtables back from the
+	readable format.
+
+	* print.c (print_preprocess, print_object): Print hashtables fully
+	and readably.
+	(syms_of_print): Provide 'hashtable-print-readable.
+
 2009-08-02  Adrian Robert  <Adrian.B.Robert@gmail.com>
 
 	* nsfont.m (ns_descriptor_to_entity): Handle case when descriptor has
